# zkML-trail

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/hiring-agent/: README.md  model.onnx  sample_input.json  sample_receipt.json  sample_vk.key  verify.sh
examples/moderation-agent/: README.md  model.onnx  sample_input.json  sample_receipt.json  sample_vk.key  verify.sh
examples/trading-agent/: README.md  model.onnx  sample_input.json  sample_receipt.json  sample_vk.key  verify.sh
scripts/: make_example_models.py
src/zkml_trail/: __init__.py  _prove_worker.py  api.py  backend.py  cli.py  errors.py  inputs.py  receipt.py  store.py  version.py
tests/: test_end_to_end.py  test_inputs_and_decode.py
